@@ -144,7 +144,11 @@
 
 
 > [THE PROJECT] Fixing bugs
-    :: in
+    :: [SOLVED] in delete_unsafe.c -> Handle NULL in the lib
+    :: [FUTURE] in cstrcat_unsafe.c - STOPPED for while
+        - cuz in the function IS_VALID_POINTER_FORTES we do not check if the block is a valid addr
+    :: [TODO] in the lib to get data value from print_by_type, this cuz the time when is call - checkout write_logfile_maplist
+    :: Provide support to alloca function
 
 
 
